Fixed horizontal scrollbar on services

--- a/_static/styles/style.scss
+++ b/_static/styles/style.scss
@@ -2157,8 +2157,7 @@ body.page-template-default:not(.home, .page-success-stories, .page-our-team, .pa
 }
 
 .section-CallToActionBar {
-	margin-top: 8rem;
-	margin-bottom: 8rem;
+	margin: 8rem 0;
 
 	.col-xs-12 {
 		display: -webkit-box;
